Final review TP1

--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
                 <div class="card-body">
                   <h5 class="card-title">Un Weekend en Tesla</h5>
                   <p class="card-text">Si votre intention était de vous procurer une Tesla...
-                    Eh bien! Prenez un long weekend de 3 jours pour décider si elle vous convient.</p>
-                  <p class="card-text">Télécharger l'application Circuit Électrique et faites
+                    Eh bien! Prenez un long weekend de 3 jours pour décider si elle vous convient.
+                    <br /></br>
+                    Télécharger l'application Circuit Électrique et faites
                     la découverte de nouveaux horizons.
                   </p>
-                  <br />
+                  
                   <a href="#" class="btn btn-primary">Sélectionner</a>
                 </div>
               </div>
@@ -97,11 +98,11 @@
                   <h5 class="card-title">Une détente au Manoir</h5>
                   <p class="card-text">Éloignez-vous de la vie citadine, et venez vivre l'expérience détente à
                     l'endroit de prédilection dans Charlevoix, au Manoir Richelieu!
-                  </p>
-                  <p class="card-text">Faites une visite au spa ou une ronde de golf avec une vue superbe sur le
+                    <br /></br>
+                    Faites une visite au spa ou une ronde de golf avec une vue superbe sur le
                     fleuve. Gâtez-vous!
                   </p>
-                  <br />
+                  
                   <a href="#" class="btn btn-primary">Sélectionner</a>
                 </div>
               </div>
@@ -114,10 +115,9 @@
                   <h5 class="card-title">Une force de la nature</h5>
                   <p class="card-text">Les chutes Niagara sont un incontournable si vous désirez vous évader
                     et vivre l'expérience de cette merveille de la nature.
+                    <br /><br />
+                    Une aventure en bateau au pied des chutes! Wow! Que d'émotions fortes!
                   </p>
-                  <p class="card-text">Une aventure en bateau au pied des chutes! Wow! Que d'émotions fortes!
-                  </p>
-                  <br />
                   <a href="#" class="btn btn-primary">Sélectionner</a>
                 </div>
               </div>
@@ -126,10 +126,13 @@
         </div>
         <br />
       </div>
-
     </div>
   </main>
-  <footer class="text-center fw-light">&copy; 2022 - Patrick Chiasson</footer>
+  <footer class="text-center fw-light mt-5">
+    <p>
+      &copy; 2022 - Patrick Chiasson
+    </p>
+  </footer>
   </div>
   <script src="index.js"></script>
 
