Final Final changes

--- a/index.html
+++ b/index.html
@@ -54,23 +54,21 @@
       </div>
     </nav>
   </header>
+
+
   <main>
     <div class="container-fluid">
-      <div class="container border-bottom border-5">
-        <br />
+      <div class="container border-bottom border-5 mb-4">
 
         <!-- Titre de la page d'accueil -->
-        <h3 class="text-center text-dark fw-bold">
+        <h3 class="text-center text-dark fw-bold mt-4">
           Échanger vos points pour une toute nouvelle récompense...
         </h3>
-        <h4 class="text-center text-secondary fw-bold">
+        <h4 class="text-center text-secondary fw-bold mb-4">
           Vous le méritez bien!
         </h4>
-        <br />
       </div>
       <div class="container border-bottom border-5">
-        <br />
-
         <div class="container">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col-sm">
@@ -85,11 +83,11 @@
                     Télécharger l'application Circuit Électrique et faites
                     la découverte de nouveaux horizons.
                   </p>
-                  
                   <a href="#" class="btn btn-primary">Sélectionner</a>
                 </div>
               </div>
             </div>
+
             <div class="col-sm">
               <div class="card shadow-sm">
                 <img class="card-img-top img-fluid" width="100%" height="auto" src="img/manoir.png"
@@ -102,11 +100,11 @@
                     Faites une visite au spa ou une ronde de golf avec une vue superbe sur le
                     fleuve. Gâtez-vous!
                   </p>
-                  
                   <a href="#" class="btn btn-primary">Sélectionner</a>
                 </div>
               </div>
             </div>
+
             <div class="col-sm">
               <div class="card shadow-sm">
                 <img class="card-img-top img-fluid" width="100%" height="auto" src="img/niagara.png"
@@ -122,6 +120,7 @@
                 </div>
               </div>
             </div>
+
           </div>
         </div>
         <br />
