Correction d'une erreur d'orthographe

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <p class="card-text">Si votre intention était de vous procurer une Tesla...
                     Eh bien! Prenez un long weekend de 3 jours pour décider si elle vous convient.
                     <br /></br>
-                    Télécharger l'application Circuit Électrique et faites
+                    Téléchargez l'application Circuit Électrique et faites
                     la découverte de nouveaux horizons.
                   </p>
                   <a href="#" class="btn btn-primary">Sélectionner</a>
