--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   <link rel="stylesheet" href="icons-1.7.2/font/bootstrap-icons.css">
 
   <title>Bienvenue dans votre espace personnel!</title>
+
+  <link rel="manifest" href="manifest.webmanifest">
+
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Cadeaux">
+  <meta name="apple-mobile-web-app-title" content="Cadeaux">
+  <meta name="msapplication-starturl" content="/">
 </head>
 
 <body>
