--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
   <!-- Barre de navigation -->
   <header>
+    <div id="liveToast"><span id="installAppButton"></span></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-xl">
         <a class="navbar-brand" href="#">Cadeaux de prestige</a>
