--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
   <!-- Barre de navigation -->
   <header>
-    <div id="liveToast"><span id="installAppButton"></span></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-xl">
         <a class="navbar-brand" href="#">Cadeaux de prestige</a>
@@ -129,7 +128,19 @@
                 </div>
               </div>
             </div>
-
+            <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+              <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                  <img src="..." class="rounded me-2" alt="...">
+                  <strong class="me-auto">Bootstrap</strong>
+                  <small>11 mins ago</small>
+                  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                  Hello, world! This is a toast message.
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <br />
@@ -143,7 +154,6 @@
   </footer>
   </div>
   <script src="index.js"></script>
-
 </body>
 
 </html>
