--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
                 </div>
               </div>
             </div>
+            <script>
+              $(document).ready(function() {
+                  $(".toast").toast('show');
+              });
+            </script>
             <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
               <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header">
