--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="toast-body">
               <button class="btn btn-primary" id="installAppButton">Installer comme application</button>
-              <button class="btn btn-secondary" onclick="self.close()">Plus tard</button>
+              <button class="btn btn-secondary" data-bs-dismiss="toast">Plus tard</button>
             </div>
           </div>
         </div>
